--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: Teaching
       - href: Conferences & Workshops.qmd
         text: Conferences & Workshops
+      - href: Personal Interests.qmd
+        text: Personal Interests
 
 # supplying a light ("minty") and dark ("slate") theme to toggle between
 format:
